--- a/application.yml
+++ b/application.yml
@@ -2,3 +2,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8080/eureka
+
+random:
+    property: random property changed
