--- a/application.yml
+++ b/application.yml
@@ -4,4 +4,4 @@ eureka:
       defaultZone: http://localhost:8080/eureka
 
 random:
-    property: random property changed1
+    property: random property changed
